Various CSS fixes: card zoom on click, picker spacing, etc.

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -46,14 +46,29 @@ body {
     -webkit-box-shadow: 0px 0px 10px 10px rgba(102,255,167,0.75);
     -moz-box-shadow: 0px 0px 10px 10px rgba(102,255,167,0.75);
     box-shadow: 0px 0px 10px 10px rgba(102,255,167,0.75);
+}
+
+.pickable-by-me {
     cursor: pointer;
+    transition: transform .3s;
 }
 
 .card {
     border-radius: 5%;
+    cursor: pointer;
 }
 
-.card-view {
+.card-back {
+    border-radius: 5%;
+}
+
+.pickable-by-me:hover {
+    transform: scale(1.05);
+}
+
+.zoom-view {
+    max-width: 600px;
+    z-index: 2000;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
@@ -61,7 +76,6 @@ body {
 }
 
 .picker-modal {
-    width: 100%;
     overflow: visible;
 }
 
@@ -69,17 +83,23 @@ body {
     padding: 2em;
 }
 
-.modal-card-container {
-    max-width: 300px;
+.modal-content {
+    width: 95% !important;
 }
 
 .modal-card {
     border-radius: 5%;
     transition: transform .3s;
+    margin: 0 auto;
+    max-width: 320px;
 }
 
-.zoomable-card:hover {
-    transform: scale(1.2);
+.no-padding {
+    padding: 0px;
+}
+
+.modal-card:hover {
+    transform: scale(1.05);
     z-index: 1000;
 }
 
@@ -92,11 +112,9 @@ body {
     transform-origin: top center;
 }
 
-
 .picks-container {
     padding-top: 6em;
     padding-bottom: 20em;
-
 }
 
 .picks {
@@ -104,8 +122,8 @@ body {
 }
 
 .pick:hover {
-    transform: scale(1.1);
-    z-index: 1000;
+    transform: scale(1.05);
+    z-index: 2;
 }
 
 .hidden {
